--- a/index.html
+++ b/index.html
@@ -8,54 +8,56 @@
 *{margin:0;padding:0;box-sizing:border-box;}
 
 body{
-font-family:-apple-system,BlinkMacSystemFont,"SF Pro Display",sans-serif;
-background:#f6f8fc;
-color:#111;
+font-family:-apple-system,BlinkMacSystemFont,"Inter","SF Pro Display",sans-serif;
+background:#f8fafc;
+color:#0f172a;
 display:flex;
 flex-direction:column;
 align-items:center;
-padding:60px 20px;
+padding:70px 20px;
 }
 
+/* badge */
 .badge{
 background:#eef2ff;
-color:#4f46e5;
+color:#6366f1;
 padding:6px 14px;
-border-radius:20px;
-font-size:13px;
-margin-bottom:20px;
+border-radius:999px;
+font-size:12px;
+letter-spacing:.3px;
+margin-bottom:25px;
 }
 
+/* hero */
 .hero{
 text-align:center;
-max-width:720px;
-margin-bottom:50px;
+max-width:750px;
+margin-bottom:55px;
 }
 
 .hero h1{
-font-size:52px;
-line-height:1.1;
+font-size:56px;
+line-height:1.05;
 font-weight:700;
-}
-
-.hero span{
-background:linear-gradient(90deg,#4f46e5,#2563eb);
+background:linear-gradient(90deg,#111827,#2563eb);
 -webkit-background-clip:text;
 -webkit-text-fill-color:transparent;
 }
 
 .hero p{
-margin-top:18px;
+margin-top:22px;
 font-size:18px;
-color:#555;
-line-height:1.5;
+color:#64748b;
+line-height:1.6;
 }
 
+/* card */
 .card{
-background:white;
-padding:35px;
-border-radius:22px;
-box-shadow:0 40px 100px rgba(0,0,0,0.08);
+background:#ffffffee;
+backdrop-filter:blur(10px);
+padding:38px;
+border-radius:24px;
+box-shadow:0 40px 80px rgba(15,23,42,0.06);
 width:100%;
 max-width:520px;
 }
@@ -63,58 +65,69 @@ max-width:520px;
 .card-header{
 display:flex;
 align-items:center;
-gap:10px;
-margin-bottom:20px;
+gap:14px;
+margin-bottom:25px;
 }
 
 .icon{
+width:36px;
+height:36px;
 background:#f1f5f9;
-padding:8px;
-border-radius:10px;
-font-size:18px;
+border-radius:12px;
+display:flex;
+align-items:center;
+justify-content:center;
 }
 
 .card-title{
-font-weight:600;
 font-size:18px;
+font-weight:600;
 }
 
 .card-sub{
 font-size:13px;
-color:#666;
+color:#94a3b8;
 margin-top:4px;
 }
 
+/* inputs */
 .grid{
 display:grid;
 grid-template-columns:1fr 1fr 1fr;
-gap:15px;
+gap:16px;
 margin-top:20px;
 }
 
 input{
 padding:12px;
-border-radius:10px;
-border:1px solid #ddd;
+border-radius:12px;
+border:1px solid #e2e8f0;
 font-size:15px;
+background:#f8fafc;
 }
 
 .small{
 font-size:12px;
-color:#777;
+color:#94a3b8;
 margin-top:6px;
 }
 
+/* button */
 button{
-margin-top:25px;
+margin-top:28px;
 width:100%;
-padding:14px;
+padding:15px;
 border:none;
-border-radius:12px;
-background:linear-gradient(90deg,#111827,#1f2937);
+border-radius:14px;
+background:linear-gradient(90deg,#111827,#1e293b);
 color:#fff;
 font-size:15px;
 cursor:pointer;
+transition:all .2s ease;
+}
+
+button:hover{
+opacity:.9;
 }
 
 .result{
@@ -125,11 +138,11 @@ font-size:18px;
 
 .lang{
 position:fixed;
-top:20px;
-right:20px;
+top:25px;
+right:30px;
+font-size:13px;
+color:#6366f1;
 cursor:pointer;
-color:#4f46e5;
-font-size:14px;
 }
 </style>
 </head>
@@ -141,10 +154,7 @@ font-size:14px;
 <div class="badge">Advanced Expected Value Engine</div>
 
 <div class="hero">
-<h1 id="title">
-Make calculated <br>
-<span>decisions, every time.</span>
-</h1>
+<h1 id="title">Make calculated decisions, every time.</h1>
 <p id="subtitle">
 Calculate the exact long-term outcome of any probability-based scenario.
 Know whether you'll profit or lose before taking the risk.
@@ -154,7 +164,12 @@ Know whether you'll profit or lose before taking the risk.
 <div class="card">
 
 <div class="card-header">
-<div class="icon">🧮</div>
+<div class="icon">
+<svg width="18" height="18" fill="none" stroke="#64748b" stroke-width="1.5" viewBox="0 0 24 24">
+<rect x="4" y="3" width="16" height="18" rx="2"/>
+<path d="M8 7h8M8 11h8M8 15h4"/>
+</svg>
+</div>
 <div>
 <div class="card-title" id="cardTitle">Expected Value</div>
 <div class="card-sub" id="cardSub">Calculate the long-term profitability of a bet</div>
@@ -183,20 +198,19 @@ Know whether you'll profit or lose before taking the risk.
 </div>
 
 <script>
-
 let zh=false;
 
 function toggleLang(){
 zh=!zh;
 
 if(zh){
-document.getElementById("title").innerHTML="每一次都做出<br><span>精準決策</span>";
-document.getElementById("subtitle").innerText="計算任何基於機率的情境的長期結果。在承擔風險前，先知道是賺還是賠。";
+document.getElementById("title").innerText="每一次都做出精準決策";
+document.getElementById("subtitle").innerText="計算任何基於機率的情境的長期結果，在承擔風險前先知道是賺還是賠。";
 document.getElementById("cardTitle").innerText="期望值";
 document.getElementById("cardSub").innerText="計算投注的長期獲利能力";
 document.getElementById("btn").innerText="計算期望值 →";
 }else{
-document.getElementById("title").innerHTML="Make calculated <br><span>decisions, every time.</span>";
+document.getElementById("title").innerText="Make calculated decisions, every time.";
 document.getElementById("subtitle").innerText="Calculate the exact long-term outcome of any probability-based scenario. Know whether you'll profit or lose before taking the risk.";
 document.getElementById("cardTitle").innerText="Expected Value";
 document.getElementById("cardSub").innerText="Calculate the long-term profitability of a bet";
