--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ color:#0f172a;
 display:flex;
 flex-direction:column;
 align-items:center;
-padding:70px 20px;
+padding:60px 20px;
 }
 
 /* badge */
@@ -24,122 +24,129 @@ color:#6366f1;
 padding:6px 14px;
 border-radius:999px;
 font-size:12px;
-letter-spacing:.3px;
-margin-bottom:25px;
+margin-bottom:22px;
 }
 
 /* hero */
 .hero{
 text-align:center;
-max-width:750px;
-margin-bottom:55px;
+max-width:760px;
+margin-bottom:45px;
 }
 
 .hero h1{
-font-size:56px;
+font-size:54px;
 line-height:1.05;
 font-weight:700;
-background:linear-gradient(90deg,#111827,#2563eb);
+background:linear-gradient(90deg,#0f172a,#2563eb);
 -webkit-background-clip:text;
 -webkit-text-fill-color:transparent;
 }
 
 .hero p{
-margin-top:22px;
-font-size:18px;
+margin-top:18px;
+font-size:17px;
 color:#64748b;
-line-height:1.6;
+line-height:1.55;
 }
 
 /* card */
 .card{
-background:#ffffffee;
-backdrop-filter:blur(10px);
-padding:38px;
-border-radius:24px;
-box-shadow:0 40px 80px rgba(15,23,42,0.06);
+background:#ffffff;
+padding:32px;
+border-radius:22px;
+box-shadow:0 35px 80px rgba(15,23,42,0.06);
 width:100%;
-max-width:520px;
+max-width:560px;
 }
 
+/* header */
 .card-header{
 display:flex;
 align-items:center;
-gap:14px;
-margin-bottom:25px;
+gap:12px;
+margin-bottom:22px;
 }
 
 .icon{
-width:36px;
-height:36px;
+width:34px;
+height:34px;
 background:#f1f5f9;
-border-radius:12px;
+border-radius:10px;
 display:flex;
 align-items:center;
 justify-content:center;
 }
 
 .card-title{
-font-size:18px;
+font-size:17px;
 font-weight:600;
 }
 
 .card-sub{
-font-size:13px;
+font-size:12px;
 color:#94a3b8;
-margin-top:4px;
+margin-top:3px;
 }
 
-/* inputs */
+/* grid */
 .grid{
 display:grid;
-grid-template-columns:1fr 1fr 1fr;
-gap:16px;
-margin-top:20px;
+grid-template-columns:repeat(3,1fr);
+gap:14px;
+}
+
+/* responsive */
+@media (max-width:900px){
+.grid{
+grid-template-columns:repeat(2,1fr);
+}
+}
+
+@media (max-width:600px){
+.grid{
+grid-template-columns:1fr;
+}
 }
 
 input{
-padding:12px;
+width:100%;
+padding:11px;
 border-radius:12px;
 border:1px solid #e2e8f0;
-font-size:15px;
+font-size:14px;
 background:#f8fafc;
 }
 
 .small{
-font-size:12px;
+font-size:11px;
 color:#94a3b8;
-margin-top:6px;
+margin-top:5px;
 }
 
 /* button */
 button{
-margin-top:28px;
+margin-top:24px;
 width:100%;
-padding:15px;
+padding:14px;
 border:none;
 border-radius:14px;
 background:linear-gradient(90deg,#111827,#1e293b);
 color:#fff;
-font-size:15px;
+font-size:14px;
 cursor:pointer;
-transition:all .2s ease;
-}
-
-button:hover{
-opacity:.9;
 }
 
 .result{
-margin-top:20px;
+margin-top:18px;
 font-weight:600;
-font-size:18px;
+font-size:16px;
 }
 
 .lang{
 position:fixed;
-top:25px;
-right:30px;
+top:22px;
+right:28px;
 font-size:13px;
 color:#6366f1;
 cursor:pointer;
