--- a/index.html
+++ b/index.html
@@ -14,139 +14,154 @@ color:#0f172a;
 display:flex;
 flex-direction:column;
 align-items:center;
-padding:60px 20px;
+padding:70px 20px;
 }
 
-/* badge */
+/* ===== Badge ===== */
 .badge{
-background:#eef2ff;
+background:rgba(99,102,241,.08);
 color:#6366f1;
 padding:6px 14px;
 border-radius:999px;
 font-size:12px;
-margin-bottom:22px;
+letter-spacing:.3px;
+margin-bottom:24px;
 }
 
-/* hero */
+/* ===== Hero ===== */
 .hero{
 text-align:center;
 max-width:760px;
-margin-bottom:45px;
+margin-bottom:48px;
 }
 
 .hero h1{
-font-size:54px;
-line-height:1.05;
+font-size:58px;
+line-height:1.03;
 font-weight:700;
-background:linear-gradient(90deg,#0f172a,#2563eb);
+letter-spacing:-1px;
+background:linear-gradient(90deg,#0f172a,#2563eb 60%);
 -webkit-background-clip:text;
 -webkit-text-fill-color:transparent;
 }
 
 .hero p{
-margin-top:18px;
-font-size:17px;
+margin-top:20px;
+font-size:18px;
 color:#64748b;
-line-height:1.55;
+line-height:1.6;
 }
 
-/* card */
+/* ===== Card ===== */
 .card{
 background:#ffffff;
-padding:32px;
-border-radius:22px;
-box-shadow:0 35px 80px rgba(15,23,42,0.06);
+padding:34px;
+border-radius:24px;
+box-shadow:0 40px 90px rgba(15,23,42,0.06);
 width:100%;
 max-width:560px;
+transition:.25s ease;
 }
 
-/* header */
+.card:hover{
+box-shadow:0 50px 110px rgba(15,23,42,0.09);
+}
+
 .card-header{
 display:flex;
 align-items:center;
-gap:12px;
-margin-bottom:22px;
+gap:14px;
+margin-bottom:24px;
 }
 
 .icon{
-width:34px;
-height:34px;
+width:36px;
+height:36px;
 background:#f1f5f9;
-border-radius:10px;
+border-radius:12px;
 display:flex;
 align-items:center;
 justify-content:center;
 }
 
 .card-title{
-font-size:17px;
+font-size:18px;
 font-weight:600;
 }
 
 .card-sub{
-font-size:12px;
+font-size:13px;
 color:#94a3b8;
 margin-top:3px;
 }
 
-/* grid */
+/* ===== Inputs ===== */
 .grid{
 display:grid;
 grid-template-columns:repeat(3,1fr);
-gap:14px;
+gap:16px;
 }
 
-/* responsive */
 @media (max-width:900px){
-.grid{
-grid-template-columns:repeat(2,1fr);
-}
+.grid{grid-template-columns:repeat(2,1fr);}
 }
 
 @media (max-width:600px){
-.grid{
-grid-template-columns:1fr;
-}
+.grid{grid-template-columns:1fr;}
 }
 
 input{
 width:100%;
-padding:11px;
-border-radius:12px;
+padding:12px;
+border-radius:14px;
 border:1px solid #e2e8f0;
 font-size:14px;
 background:#f8fafc;
+transition:.2s;
+}
+
+input:focus{
+outline:none;
+border-color:#6366f1;
+background:#fff;
 }
 
 .small{
 font-size:11px;
 color:#94a3b8;
-margin-top:5px;
+margin-top:6px;
 }
 
-/* button */
+/* ===== Button ===== */
 button{
-margin-top:24px;
+margin-top:26px;
 width:100%;
-padding:14px;
+padding:15px;
 border:none;
-border-radius:14px;
+border-radius:16px;
 background:linear-gradient(90deg,#111827,#1e293b);
 color:#fff;
 font-size:14px;
 cursor:pointer;
+transition:.2s ease;
+}
+
+button:hover{
+opacity:.9;
+transform:translateY(-1px);
 }
 
 .result{
 margin-top:18px;
 font-weight:600;
-font-size:16px;
+font-size:17px;
 }
 
+/* ===== Lang Switch ===== */
 .lang{
 position:fixed;
-top:22px;
-right:28px;
+top:25px;
+right:30px;
 font-size:13px;
 color:#6366f1;
 cursor:pointer;
@@ -236,9 +251,17 @@ return;
 }
 
 let ev=p*r-c;
+let result=document.getElementById("result");
 
-document.getElementById("result").innerText=
-(zh?"期望值 = ":"Expected Value = ")+ev;
+result.innerText=(zh?"期望值 = ":"Expected Value = ")+ev;
+
+if(ev>0){
+result.style.color="#16a34a";
+}else if(ev<0){
+result.style.color="#dc2626";
+}else{
+result.style.color="#0f172a";
+}
 }
 </script>
 
