--- a/index.html
+++ b/index.html
@@ -9,64 +9,105 @@
 
 body{
 font-family:-apple-system,BlinkMacSystemFont,"Inter","SF Pro Display",sans-serif;
-background:#f8fafc;
-color:#0f172a;
+background:#0f172a;
+color:white;
 display:flex;
 flex-direction:column;
 align-items:center;
-padding:70px 20px;
+padding:90px 20px;
+overflow-x:hidden;
 }
 
-/* ===== Badge ===== */
+/* ==== animated background glow ==== */
+body::before{
+content:"";
+position:fixed;
+width:600px;
+height:600px;
+background:radial-gradient(circle,#2563eb55,transparent 60%);
+top:-200px;
+left:-200px;
+z-index:-1;
+animation:float 8s ease-in-out infinite;
+}
+
+body::after{
+content:"";
+position:fixed;
+width:500px;
+height:500px;
+background:radial-gradient(circle,#6366f155,transparent 60%);
+bottom:-200px;
+right:-200px;
+z-index:-1;
+animation:float 10s ease-in-out infinite reverse;
+}
+
+@keyframes float{
+0%,100%{transform:translateY(0);}
+50%{transform:translateY(30px);}
+}
+
+/* badge */
 .badge{
-background:rgba(99,102,241,.08);
-color:#6366f1;
+background:rgba(255,255,255,.08);
 padding:6px 14px;
 border-radius:999px;
 font-size:12px;
 letter-spacing:.3px;
-margin-bottom:24px;
+margin-bottom:28px;
+backdrop-filter:blur(10px);
 }
 
-/* ===== Hero ===== */
+/* hero */
 .hero{
 text-align:center;
 max-width:760px;
-margin-bottom:48px;
+margin-bottom:60px;
+animation:fadeIn 1s ease forwards;
 }
 
 .hero h1{
-font-size:58px;
-line-height:1.03;
+font-size:60px;
+line-height:1.05;
 font-weight:700;
 letter-spacing:-1px;
-background:linear-gradient(90deg,#0f172a,#2563eb 60%);
+background:linear-gradient(90deg,#ffffff,#60a5fa 70%);
 -webkit-background-clip:text;
 -webkit-text-fill-color:transparent;
 }
 
 .hero p{
-margin-top:20px;
+margin-top:22px;
 font-size:18px;
-color:#64748b;
+color:#cbd5e1;
 line-height:1.6;
 }
 
-/* ===== Card ===== */
+/* card */
 .card{
-background:#ffffff;
-padding:34px;
-border-radius:24px;
-box-shadow:0 40px 90px rgba(15,23,42,0.06);
+background:rgba(255,255,255,.06);
+backdrop-filter:blur(20px);
+padding:38px;
+border-radius:28px;
+box-shadow:0 40px 100px rgba(0,0,0,.3);
 width:100%;
-max-width:560px;
-transition:.25s ease;
+max-width:580px;
+animation:fadeUp 1s ease forwards;
 }
 
-.card:hover{
-box-shadow:0 50px 110px rgba(15,23,42,0.09);
+/* animations */
+@keyframes fadeIn{
+from{opacity:0;transform:translateY(-10px);}
+to{opacity:1;transform:translateY(0);}
 }
 
+@keyframes fadeUp{
+from{opacity:0;transform:translateY(30px);}
+to{opacity:1;transform:translateY(0);}
+}
+
+/* header */
 .card-header{
 display:flex;
 align-items:center;
@@ -75,9 +116,9 @@ margin-bottom:24px;
 }
 
 .icon{
-width:36px;
-height:36px;
-background:#f1f5f9;
+width:38px;
+height:38px;
+background:rgba(255,255,255,.1);
 border-radius:12px;
 display:flex;
 align-items:center;
@@ -95,7 +136,7 @@ color:#94a3b8;
 margin-top:3px;
 }
 
-/* ===== Inputs ===== */
+/* inputs */
 .grid{
 display:grid;
 grid-template-columns:repeat(3,1fr);
@@ -112,18 +153,19 @@ gap:16px;
 
 input{
 width:100%;
-padding:12px;
+padding:13px;
 border-radius:14px;
-border:1px solid #e2e8f0;
+border:1px solid rgba(255,255,255,.15);
 font-size:14px;
-background:#f8fafc;
+background:rgba(255,255,255,.08);
+color:white;
 transition:.2s;
 }
 
 input:focus{
 outline:none;
-border-color:#6366f1;
-background:#fff;
+border-color:#60a5fa;
+background:rgba(255,255,255,.12);
 }
 
 .small{
@@ -132,14 +174,14 @@ color:#94a3b8;
 margin-top:6px;
 }
 
-/* ===== Button ===== */
+/* button */
 button{
-margin-top:26px;
+margin-top:28px;
 width:100%;
 padding:15px;
 border:none;
 border-radius:16px;
-background:linear-gradient(90deg,#111827,#1e293b);
+background:linear-gradient(90deg,#2563eb,#6366f1);
 color:#fff;
 font-size:14px;
 cursor:pointer;
@@ -147,23 +189,24 @@ transition:.2s ease;
 }
 
 button:hover{
-opacity:.9;
-transform:translateY(-1px);
+transform:translateY(-2px);
+box-shadow:0 10px 30px rgba(99,102,241,.4);
 }
 
 .result{
-margin-top:18px;
+margin-top:20px;
 font-weight:600;
-font-size:17px;
+font-size:18px;
+transition:.3s;
 }
 
-/* ===== Lang Switch ===== */
+/* lang */
 .lang{
 position:fixed;
 top:25px;
 right:30px;
 font-size:13px;
-color:#6366f1;
+color:#60a5fa;
 cursor:pointer;
 }
 </style>
@@ -187,7 +230,7 @@ Know whether you'll profit or lose before taking the risk.
 
 <div class="card-header">
 <div class="icon">
-<svg width="18" height="18" fill="none" stroke="#64748b" stroke-width="1.5" viewBox="0 0 24 24">
+<svg width="20" height="20" fill="none" stroke="#cbd5e1" stroke-width="1.5" viewBox="0 0 24 24">
 <rect x="4" y="3" width="16" height="18" rx="2"/>
 <path d="M8 7h8M8 11h8M8 15h4"/>
 </svg>
@@ -256,11 +299,11 @@ let result=document.getElementById("result");
 result.innerText=(zh?"期望值 = ":"Expected Value = ")+ev;
 
 if(ev>0){
-result.style.color="#16a34a";
+result.style.color="#22c55e";
 }else if(ev<0){
-result.style.color="#dc2626";
+result.style.color="#ef4444";
 }else{
-result.style.color="#0f172a";
+result.style.color="#ffffff";
 }
 }
 </script>
