--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
 
 body{
 font-family:-apple-system,BlinkMacSystemFont,"SF Pro Display","Inter",sans-serif;
-background:linear-gradient(180deg,#0e0e0e,#141414);
+background:
+radial-gradient(circle at 20% 20%, #1c1c1c, transparent 40%),
+radial-gradient(circle at 80% 80%, #181818, transparent 50%),
+linear-gradient(180deg,#0b0b0b 0%, #111111 100%);
 color:white;
 display:flex;
 flex-direction:column;
 align-items:center;
-padding:100px 20px;
-overflow-x:hidden;
+padding:110px 20px;
+min-height:100vh;
 }
 
 /* ===== badge ===== */
@@ -25,29 +28,30 @@ padding:6px 16px;
 border-radius:999px;
 font-size:12px;
 letter-spacing:.4px;
-margin-bottom:30px;
+margin-bottom:32px;
 color:#cfcfcf;
+backdrop-filter:blur(10px);
 }
 
 /* ===== hero ===== */
 .hero{
 text-align:center;
 max-width:720px;
-margin-bottom:60px;
+margin-bottom:70px;
 }
 
 .hero h1{
-font-size:60px;
+font-size:62px;
 line-height:1.02;
 font-weight:700;
 letter-spacing:-1.2px;
-background:linear-gradient(90deg,#ffffff,#bfbfbf 60%,#6b6b6b);
+background:linear-gradient(90deg,#ffffff 0%,#d4d4d4 50%,#7a7a7a 100%);
 -webkit-background-clip:text;
 -webkit-text-fill-color:transparent;
 }
 
 .hero p{
-margin-top:22px;
+margin-top:24px;
 font-size:17px;
 color:#9ca3af;
 line-height:1.6;
@@ -55,10 +59,13 @@ line-height:1.6;
 
 /* ===== card ===== */
 .card{
-background:#1a1a1a;
-padding:38px;
-border-radius:28px;
-box-shadow:0 30px 80px rgba(0,0,0,.7);
+background:rgba(255,255,255,.04);
+backdrop-filter:blur(30px);
+padding:42px;
+border-radius:30px;
+box-shadow:
+0 40px 100px rgba(0,0,0,.6),
+0 0 0 1px rgba(255,255,255,.03) inset;
 width:100%;
 max-width:560px;
 }
@@ -72,9 +79,9 @@ margin-bottom:28px;
 }
 
 .icon{
-width:40px;
-height:40px;
-background:#242424;
+width:42px;
+height:42px;
+background:rgba(255,255,255,.06);
 border-radius:14px;
 display:flex;
 align-items:center;
@@ -88,7 +95,7 @@ font-weight:600;
 
 .card-sub{
 font-size:13px;
-color:#6b7280;
+color:#737373;
 margin-top:3px;
 }
 
@@ -96,7 +103,7 @@ margin-top:3px;
 .grid{
 display:grid;
 grid-template-columns:repeat(3,1fr);
-gap:16px;
+gap:18px;
 }
 
 @media (max-width:900px){
@@ -110,19 +117,19 @@ gap:16px;
 /* ===== inputs ===== */
 input{
 width:100%;
-padding:13px;
-border-radius:16px;
-border:1px solid #2a2a2a;
+padding:14px;
+border-radius:18px;
+border:1px solid rgba(255,255,255,.08);
 font-size:14px;
-background:#121212;
+background:rgba(255,255,255,.03);
 color:white;
 transition:.2s;
 }
 
 input:focus{
 outline:none;
-border-color:#9ca3af;
-background:#161616;
+border-color:#bfbfbf;
+background:rgba(255,255,255,.06);
 }
 
 .small{
@@ -131,17 +138,18 @@ color:#6b7280;
 margin-top:6px;
 }
 
-/* ===== BUTTON (強化重點) ===== */
+/* ===== BUTTON 強化焦點 ===== */
 button{
-margin-top:32px;
+margin-top:34px;
 width:100%;
-padding:17px;
+padding:18px;
 border:none;
-border-radius:20px;
+border-radius:22px;
 background:linear-gradient(180deg,#ffffff,#d4d4d4);
 color:#000;
 font-size:15px;
 font-weight:600;
+letter-spacing:.3px;
 cursor:pointer;
 transition:.2s ease;
 box-shadow:
@@ -152,12 +160,12 @@ inset 0 -3px 6px rgba(0,0,0,.2);
 button:hover{
 transform:translateY(-2px);
 box-shadow:
-0 12px 40px rgba(255,255,255,.25),
+0 14px 45px rgba(255,255,255,.25),
 inset 0 -3px 6px rgba(0,0,0,.25);
 }
 
 .result{
-margin-top:22px;
+margin-top:24px;
 font-weight:600;
 font-size:18px;
 transition:.3s;
@@ -205,15 +213,15 @@ Know whether you'll profit or lose before taking the risk.
 
 <div class="grid">
 <div>
-<input type="number" id="p" placeholder="Probability">
+<input type="number" id="p">
 <div class="small" id="pSmall">Value between 0 and 1</div>
 </div>
 <div>
-<input type="number" id="r" placeholder="Reward">
+<input type="number" id="r">
 <div class="small" id="rSmall">Amount won</div>
 </div>
 <div>
-<input type="number" id="c" placeholder="Cost">
+<input type="number" id="c">
 <div class="small" id="cSmall">Initial investment</div>
 </div>
 </div>
@@ -260,9 +268,9 @@ btn.innerText="Calculate Expected Value";
 }
 
 function calc(){
-let p=parseFloat(document.getElementById("p").value);
-let r=parseFloat(document.getElementById("r").value);
-let c=parseFloat(document.getElementById("c").value);
+let p=parseFloat(p.value);
+let r=parseFloat(r.value);
+let c=parseFloat(c.value);
 
 if(isNaN(p)||isNaN(r)||isNaN(c)){
 result.innerText=zh?"請填完整數字":"Please enter all values";
