--- a/index.html
+++ b/index.html
@@ -44,13 +44,27 @@ margin-bottom:70px;
 font-size:62px;
 line-height:1.02;
 font-weight:700;
-letter-spacing:-1.2px;
-background:linear-gradient(90deg,#ffffff 0%,#d4d4d4 50%,#7a7a7a 100%);
+letter-spacing:-1.4px;
+background:linear-gradient(
+90deg,
+#ffffff 0%,
+#f5f5f5 25%,
+#cfcfcf 50%,
+#9ca3af 75%,
+#5f5f5f 100%
+);
 -webkit-background-clip:text;
 -webkit-text-fill-color:transparent;
+background-size:200% auto;
+}
+@keyframes shimmer {
+0% { background-position: 0% center; }
+100% { background-position: 200% center; }
 }
 
-.hero p{
+.hero h1{
+animation: shimmer 6s linear infinite;
+}.hero p{
 margin-top:24px;
 font-size:17px;
 color:#9ca3af;
