--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Expected Value</title>
+<title>Decision Engine Pro</title>
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box;}
@@ -17,268 +17,211 @@ color:white;
 display:flex;
 flex-direction:column;
 align-items:center;
-padding:110px 20px;
+padding:100px 20px;
 min-height:100vh;
 }
 
-/* badge */
-.badge{
-background:rgba(255,255,255,.05);
-padding:6px 16px;
-border-radius:999px;
-font-size:12px;
-letter-spacing:.4px;
-margin-bottom:32px;
-color:#cfcfcf;
-}
-
-/* hero */
+/* HERO */
 .hero{
 text-align:center;
-max-width:720px;
-margin-bottom:70px;
+max-width:800px;
+margin-bottom:60px;
 }
 
 .hero h1{
-font-size:62px;
-line-height:1.02;
+font-size:60px;
 font-weight:700;
-letter-spacing:-1.4px;
-background:linear-gradient(
-90deg,
-#ffffff 0%,
-#f5f5f5 25%,
-#cfcfcf 50%,
-#9ca3af 75%,
-#5f5f5f 100%
-);
+letter-spacing:-1.5px;
+background:linear-gradient(90deg,#ffffff,#cfcfcf,#6b7280);
 -webkit-background-clip:text;
 -webkit-text-fill-color:transparent;
 }
 
 .hero p{
-margin-top:24px;
-font-size:17px;
+margin-top:20px;
 color:#9ca3af;
-line-height:1.6;
 }
 
-/* card */
+/* CARD */
 .card{
-background:rgba(255,255,255,.04);
+background:rgba(255,255,255,.05);
 backdrop-filter:blur(30px);
-padding:42px;
-border-radius:30px;
-box-shadow:
-0 40px 100px rgba(0,0,0,.6),
-0 0 0 1px rgba(255,255,255,.03) inset;
+padding:40px;
+border-radius:28px;
+box-shadow:0 40px 100px rgba(0,0,0,.6);
 width:100%;
-max-width:560px;
+max-width:600px;
 }
 
-/* header */
-.card-header{
-display:flex;
-align-items:center;
-gap:14px;
-margin-bottom:28px;
-}
-
-.icon{
-width:42px;
-height:42px;
-background:rgba(255,255,255,.06);
-border-radius:14px;
-display:flex;
-align-items:center;
-justify-content:center;
-}
-
-.card-title{
-font-size:18px;
-font-weight:600;
-}
-
-.card-sub{
-font-size:13px;
-color:#737373;
-margin-top:3px;
-}
-
-/* grid */
 .grid{
 display:grid;
-grid-template-columns:repeat(3,1fr);
-gap:18px;
+grid-template-columns:1fr 1fr;
+gap:16px;
+margin-bottom:20px;
 }
 
-@media (max-width:900px){
-.grid{grid-template-columns:repeat(2,1fr);}
-}
-
-@media (max-width:600px){
+@media(max-width:600px){
 .grid{grid-template-columns:1fr;}
 }
 
-/* inputs */
 input{
 width:100%;
 padding:14px;
 border-radius:18px;
 border:1px solid rgba(255,255,255,.08);
-font-size:14px;
 background:rgba(255,255,255,.03);
 color:white;
-transition:.2s;
+font-size:15px;
 }
 
 input:focus{
 outline:none;
 border-color:#bfbfbf;
-background:rgba(255,255,255,.06);
+background:rgba(255,255,255,.07);
 }
 
-.small{
-font-size:11px;
-color:#6b7280;
-margin-top:6px;
-}
-
-/* button */
-button{
-margin-top:34px;
-width:100%;
-padding:18px;
-border:none;
-border-radius:22px;
-background:linear-gradient(180deg,#ffffff,#d4d4d4);
-color:#000;
-font-size:15px;
-font-weight:600;
-cursor:pointer;
-transition:.2s ease;
-box-shadow:
-0 8px 30px rgba(255,255,255,.15),
-inset 0 -3px 6px rgba(0,0,0,.2);
-}
-
-button:hover{
-transform:translateY(-2px);
-box-shadow:
-0 14px 45px rgba(255,255,255,.25),
-inset 0 -3px 6px rgba(0,0,0,.25);
-}
-
-.result{
-margin-top:24px;
-font-weight:600;
-font-size:18px;
-transition:.3s;
-}
-
-.lang{
-position:fixed;
-top:28px;
-right:30px;
+.label{
 font-size:13px;
 color:#9ca3af;
-cursor:pointer;
+margin-bottom:6px;
 }
+
+.results{
+margin-top:25px;
+display:grid;
+gap:14px;
+}
+
+.result-box{
+background:rgba(255,255,255,.04);
+padding:16px;
+border-radius:16px;
+font-size:15px;
+display:flex;
+justify-content:space-between;
+}
+
+.value{
+font-weight:600;
+}
+
+/* positive negative */
+.green{color:#22c55e;}
+.red{color:#ef4444;}
+.gray{color:#e5e7eb;}
 </style>
 </head>
 
 <body>
 
-<div class="lang" onclick="toggleLang()">中文 / English</div>
-
-<div class="badge" id="badge">Advanced Expected Value Engine</div>
-
 <div class="hero">
-<h1 id="title">Make calculated decisions, every time.</h1>
-<p id="subtitle">
-Calculate the exact long-term outcome of any probability-based scenario.
-Know whether you'll profit or lose before taking the risk.
-</p>
+<h1>Decision Engine Pro</h1>
+<p>Expected Value • ROI • Break-even • Kelly Criterion</p>
 </div>
 
 <div class="card">
 
-<div class="card-header">
-<div class="icon">
-<svg width="20" height="20" fill="none" stroke="#cfcfcf" stroke-width="1.5" viewBox="0 0 24 24">
-<rect x="4" y="3" width="16" height="18" rx="2"/>
-<path d="M8 7h8M8 11h8M8 15h4"/>
-</svg>
-</div>
-<div>
-<div class="card-title" id="cardTitle">Expected Value</div>
-<div class="card-sub" id="cardSub">Calculate long-term profitability</div>
-</div>
-</div>
-
 <div class="grid">
 <div>
-<input type="number" id="p" placeholder="Probability">
-<div class="small" id="pSmall">Value between 0 and 1</div>
+<div class="label">Probability (0~1)</div>
+<input type="number" id="p" step="0.01">
 </div>
+
 <div>
-<input type="number" id="r" placeholder="Reward">
-<div class="small" id="rSmall">Amount won</div>
+<div class="label">Reward</div>
+<input type="number" id="r">
 </div>
+
 <div>
-<input type="number" id="c" placeholder="Cost">
-<div class="small" id="cSmall">Initial investment</div>
+<div class="label">Cost</div>
+<input type="number" id="c">
+</div>
+
+<div>
+<div class="label">Total Bankroll (for Kelly)</div>
+<input type="number" id="bank">
 </div>
 </div>
 
-<button onclick="calc()" id="btn">Calculate Expected Value</button>
+<div class="results">
 
-<div class="result" id="result"></div>
+<div class="result-box">
+<span>Expected Value</span>
+<span class="value" id="ev">-</span>
+</div>
+
+<div class="result-box">
+<span>ROI</span>
+<span class="value" id="roi">-</span>
+</div>
+
+<div class="result-box">
+<span>Break-even Probability</span>
+<span class="value" id="breakeven">-</span>
+</div>
+
+<div class="result-box">
+<span>Kelly Suggested Bet</span>
+<span class="value" id="kelly">-</span>
+</div>
+
+</div>
 
 </div>
 
 <script>
-let zh=false;
+const inputs = document.querySelectorAll("input");
+inputs.forEach(input => input.addEventListener("input", calculate));
 
-function toggleLang(){
-zh=!zh;
+function calculate(){
 
-document.getElementById("badge").innerText = zh?"進階期望值計算引擎":"Advanced Expected Value Engine";
-document.getElementById("title").innerText = zh?"每一次都做出精準決策":"Make calculated decisions, every time.";
-document.getElementById("subtitle").innerText = zh?"計算任何基於機率的情境長期結果，在承擔風險前先知道是賺還是賠。":"Calculate the exact long-term outcome of any probability-based scenario.";
-document.getElementById("cardTitle").innerText = zh?"期望值":"Expected Value";
-document.getElementById("cardSub").innerText = zh?"計算長期獲利能力":"Calculate long-term profitability";
-document.getElementById("p").placeholder = zh?"機率":"Probability";
-document.getElementById("r").placeholder = zh?"獎勵":"Reward";
-document.getElementById("c").placeholder = zh?"花費":"Cost";
-document.getElementById("pSmall").innerText = zh?"數值介於 0 到 1":"Value between 0 and 1";
-document.getElementById("rSmall").innerText = zh?"可能獲得的金額":"Amount won";
-document.getElementById("cSmall").innerText = zh?"投入成本":"Initial investment";
-document.getElementById("btn").innerText = zh?"計算期望值":"Calculate Expected Value";
-}
-
-function calc(){
 let p = parseFloat(document.getElementById("p").value);
 let r = parseFloat(document.getElementById("r").value);
 let c = parseFloat(document.getElementById("c").value);
-let result = document.getElementById("result");
+let bank = parseFloat(document.getElementById("bank").value);
 
 if(isNaN(p)||isNaN(r)||isNaN(c)){
-result.innerText = zh?"請填完整數字":"Please enter all values";
-result.style.color="#d4d4d4";
+document.getElementById("ev").innerText="-";
+document.getElementById("roi").innerText="-";
+document.getElementById("breakeven").innerText="-";
+document.getElementById("kelly").innerText="-";
 return;
 }
 
+/* Expected Value */
 let ev = p*r - c;
 
-result.innerText = (zh?"期望值 = ":"Expected Value = ") + ev;
+/* ROI */
+let roi = ((ev/c)*100);
 
-if(ev>0){
-result.style.color="#22c55e";
-}else if(ev<0){
-result.style.color="#ef4444";
+/* Break-even probability */
+let breakeven = c/r;
+
+/* Kelly Criterion */
+let b = (r-c)/c;
+let kellyFraction = ((p*(b+1)-1)/b);
+let kellyAmount = (bank && !isNaN(bank)) ? bank * kellyFraction : 0;
+
+/* Display */
+update("ev", ev);
+update("roi", roi.toFixed(2)+"%");
+update("breakeven", breakeven.toFixed(2));
+update("kelly", bank ? kellyAmount.toFixed(2) : "-");
+
+}
+
+function update(id,value){
+let el=document.getElementById(id);
+el.innerText=value;
+
+if(typeof value === "number"){
+if(value>0){
+el.className="value green";
+}else if(value<0){
+el.className="value red";
 }else{
-result.style.color="#ffffff";
+el.className="value gray";
+}
 }
 }
 </script>
